// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LibraryPage rendering tests LibraryPage - library items - test 1`] = `
<div>
  <div
    data-testid="library-page"
  >
    <div
      class="container mx-auto px-4 py-8"
      data-testid="library"
    >
      <div
        class="mb-8"
      >
        <div
          class="mb-2 flex items-center justify-between"
        >
          <h1
            class="text-3xl font-bold text-slate-900"
          >
            Meine Bibliothek
          </h1>
          <a
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer"
            data-slot="button"
            data-testid="create-library-entry-btn"
            href="/library/new"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus mr-2 h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            Neue Vorlage erstellen
          </a>
        </div>
        <p
          class="text-slate-600"
        >
          Greifen Sie auf Ihre Vorlagen zu und verwalten Sie diese
        </p>
      </div>
      <div
        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
        data-testid="library-entries"
      >
        <div
          class="text-card-foreground flex flex-col shadow-sm group gap-0 rounded-lg border border-slate-300 bg-white p-0 transition-all duration-200 hover:border-slate-400 hover:shadow-md"
          data-slot="card"
          data-testid="library-entry-card"
        >
          <div
            class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 gap-3 border-b border-slate-200 p-5 pb-3"
            data-slot="card-header"
          >
            <a
              class="group/title"
              data-testid="mock-link"
              href="/library/457bf695-6f74-44aa-9b3a-e179ea9e8170"
            >
              <h4
                class="cursor-pointer text-lg leading-tight font-semibold text-slate-900 transition-colors hover:text-blue-700"
              >
                title 0
              </h4>
            </a>
            <div>
              <span
                class="self-start rounded-md border border-blue-200 bg-blue-50 px-2.5 py-1 text-xs font-medium text-blue-700"
              >
                model 0
              </span>
            </div>
          </div>
          <div
            class="grid gap-3 p-5"
            data-slot="card-content"
          >
            <div
              class="mb-2 flex flex-wrap gap-1"
              data-testid="categories"
            >
              <span
                class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
              >
                category 0
              </span>
              <span
                class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
              >
                category 1
              </span>
              <span
                class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
              >
                category 2
              </span>
            </div>
            <p
              class="line-clamp-3 text-sm leading-relaxed text-slate-700"
            >
              description 0
            </p>
            <div
              class="flex gap-2 pt-2"
            >
              <button
                class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer bg-blue-600 text-white hover:bg-blue-700 flex-1"
                data-slot="button"
                data-testid="create-prompt-btn"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus mr-1.5 h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
                <span>
                  Prompt erstellen
                </span>
              </button>
              <div
                data-slot="dropdown-menu"
                data-testid="mock-react-dropdown-menu-root"
              >
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
                  data-slot="button"
                  data-testid="dropdown-menu-btn"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-ellipsis-vertical h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="12"
                      cy="5"
                      r="1"
                    />
                    <circle
                      cx="12"
                      cy="19"
                      r="1"
                    />
                  </svg>
                </button>
                <div
                  data-testid="mock-react-dropdown-menu-portal"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="text-card-foreground flex flex-col shadow-sm group gap-0 rounded-lg border border-slate-300 bg-white p-0 transition-all duration-200 hover:border-slate-400 hover:shadow-md"
          data-slot="card"
          data-testid="library-entry-card"
        >
          <div
            class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 gap-3 border-b border-slate-200 p-5 pb-3"
            data-slot="card-header"
          >
            <a
              class="group/title"
              data-testid="mock-link"
              href="/library/457bf695-6f74-44aa-9b3a-e179ea9e8171"
            >
              <h4
                class="cursor-pointer text-lg leading-tight font-semibold text-slate-900 transition-colors hover:text-blue-700"
              >
                title 1
              </h4>
            </a>
            <div>
              <span
                class="self-start rounded-md border border-blue-200 bg-blue-50 px-2.5 py-1 text-xs font-medium text-blue-700"
              >
                model 1
              </span>
            </div>
          </div>
          <div
            class="grid gap-3 p-5"
            data-slot="card-content"
          >
            <div
              class="mb-2 flex flex-wrap gap-1"
              data-testid="categories"
            >
              <span
                class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
              >
                category 0
              </span>
              <span
                class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
              >
                category 1
              </span>
              <span
                class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
              >
                category 2
              </span>
            </div>
            <p
              class="line-clamp-3 text-sm leading-relaxed text-slate-700"
            >
              description 1
            </p>
            <div
              class="flex gap-2 pt-2"
            >
              <button
                class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer bg-blue-600 text-white hover:bg-blue-700 flex-1"
                data-slot="button"
                data-testid="create-prompt-btn"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus mr-1.5 h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
                <span>
                  Prompt erstellen
                </span>
              </button>
              <div
                data-slot="dropdown-menu"
                data-testid="mock-react-dropdown-menu-root"
              >
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
                  data-slot="button"
                  data-testid="dropdown-menu-btn"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-ellipsis-vertical h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="12"
                      cy="5"
                      r="1"
                    />
                    <circle
                      cx="12"
                      cy="19"
                      r="1"
                    />
                  </svg>
                </button>
                <div
                  data-testid="mock-react-dropdown-menu-portal"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="text-card-foreground flex flex-col shadow-sm group gap-0 rounded-lg border border-slate-300 bg-white p-0 transition-all duration-200 hover:border-slate-400 hover:shadow-md"
          data-slot="card"
          data-testid="library-entry-card"
        >
          <div
            class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 gap-3 border-b border-slate-200 p-5 pb-3"
            data-slot="card-header"
          >
            <a
              class="group/title"
              data-testid="mock-link"
              href="/library/457bf695-6f74-44aa-9b3a-e179ea9e8172"
            >
              <h4
                class="cursor-pointer text-lg leading-tight font-semibold text-slate-900 transition-colors hover:text-blue-700"
              >
                title 2
              </h4>
            </a>
            <div>
              <span
                class="self-start rounded-md border border-blue-200 bg-blue-50 px-2.5 py-1 text-xs font-medium text-blue-700"
              >
                model 2
              </span>
            </div>
          </div>
          <div
            class="grid gap-3 p-5"
            data-slot="card-content"
          >
            <div
              class="mb-2 flex flex-wrap gap-1"
              data-testid="categories"
            >
              <span
                class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
              >
                category 0
              </span>
              <span
                class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
              >
                category 1
              </span>
              <span
                class="rounded-md border border-slate-200 bg-slate-100 px-2 py-0.5 text-xs text-slate-700"
              >
                category 2
              </span>
            </div>
            <p
              class="line-clamp-3 text-sm leading-relaxed text-slate-700"
            >
              description 2
            </p>
            <div
              class="flex gap-2 pt-2"
            >
              <button
                class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer bg-blue-600 text-white hover:bg-blue-700 flex-1"
                data-slot="button"
                data-testid="create-prompt-btn"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-plus mr-1.5 h-4 w-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5 12h14"
                  />
                  <path
                    d="M12 5v14"
                  />
                </svg>
                <span>
                  Prompt erstellen
                </span>
              </button>
              <div
                data-slot="dropdown-menu"
                data-testid="mock-react-dropdown-menu-root"
              >
                <button
                  class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
                  data-slot="button"
                  data-testid="dropdown-menu-btn"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-ellipsis-vertical h-4 w-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="12"
                      cy="5"
                      r="1"
                    />
                    <circle
                      cx="12"
                      cy="19"
                      r="1"
                    />
                  </svg>
                </button>
                <div
                  data-testid="mock-react-dropdown-menu-portal"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LibraryPage rendering tests LibraryPage - library items empty - test 1`] = `
<div>
  <div
    data-testid="library-page"
  >
    <div
      class="container mx-auto px-4 py-8"
      data-testid="library"
    >
      <h1
        class="mb-8 text-3xl font-bold text-slate-900"
      >
        Meine Bibliothek
      </h1>
      <div
        class="py-12 text-center"
        data-testid="library-empty"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-book-open mx-auto mb-4 h-16 w-16 text-slate-300"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 7v14"
          />
          <path
            d="M3 18a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h5a4 4 0 0 1 4 4 4 4 0 0 1 4-4h5a1 1 0 0 1 1 1v13a1 1 0 0 1-1 1h-6a3 3 0 0 0-3 3 3 3 0 0 0-3-3z"
          />
        </svg>
        <h2
          class="mb-2 text-xl font-semibold text-slate-900"
        >
          Ihre Bibliothek ist leer
        </h2>
        <p
          class="mb-6 text-slate-600"
        >
          Estellen Sie Vorlagen oder abonnieren Sie, um auf Ihre Bibliothek zuzugreifen
        </p>
        <a
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground hover:bg-primary/90 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer"
          data-slot="button"
          data-testid="create-library-entry-btn"
          href="/library/new"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-plus mr-2 h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Neue Vorlage erstellen
        </a>
      </div>
    </div>
  </div>
</div>
`;
